<resources>
    <string name="remember_me">Remember my</string>
    <string name="forgot_pass">Forgot Password ?</string>
    <string name="sign_in">SIGN IN</string>
    <string name="create_account">Create a new account ?</string>
    <string name="inputfield">inputfield</string>
    <string name="vector">vector</string>
    <string name="fos">I accept the terms of the agreement</string>
    <string name="todo1">TODO</string>
    <string name="todo3">TODO</string>
    <string name="todo4">TODO</string>
    <string name="_1">road</string>
    <string name="ivanov_ivan">ivanov_ivan</string>
    <string name="novosibirsk">novosibirsk</string>
    <string name="group_2">group_2</string>

</resources>