<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/group_1"
        tools:ignore="ImageContrastCheck" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="195dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/inputfield"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="@dimen/cardview_compat_inset_shadow"
                app:srcCompat="@drawable/vector__5_"
                tools:ignore="ImageContrastCheck" />

            <EditText
                android:id="@+id/editTextTextEmailAddress4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:background="@drawable/rectangle_2__2_"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck,TextContrastCheck" />



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginTop="20dp"
            android:background="@drawable/inputfield"
            android:orientation="horizontal">



            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="@dimen/cardview_compat_inset_shadow"
                app:srcCompat="@drawable/vector__6_"
                tools:ignore="ImageContrastCheck" />

            <EditText
                android:id="@+id/editTextTextPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPassword"
                android:background="@drawable/rectangle_2__2_"
                tools:ignore="TouchTargetSizeCheck,TextContrastCheck,TextContrastCheck"
                android:autofillHints="" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginTop="20dp"
            android:background="@drawable/inputfield"
            android:orientation="horizontal">



            <ImageView
                android:id="@+id/image"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="@dimen/cardview_compat_inset_shadow"
                app:srcCompat="@drawable/vector__6_"
                tools:ignore="ImageContrastCheck" />

            <EditText
                android:id="@+id/editText3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPassword"
                android:background="@drawable/rectangle_2__2_"
                tools:ignore="TouchTargetSizeCheck,TextContrastCheck,TextContrastCheck"
                android:autofillHints="" />
        </LinearLayout>



    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_weight="1"
            android:backgroundTint="@color/black"
            android:button="@android:drawable/checkbox_on_background"
            android:buttonTint="#FFFFFF"
            android:fontFamily="sans-serif-medium"
            android:text="@string/fos"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />


    </LinearLayout>

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/vector"
        tools:ignore="ImageContrastCheck,MissingConstraints"
        tools:layout_editor_absoluteX="292dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="290dp"
        android:layout_height="59dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/yellow"
        android:fontFamily="sans-serif-black"
        android:text="@string/sign_in"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_weight="1"
        android:fontFamily="sans-serif-medium"
        android:text="@string/create_account"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        tools:ignore="TextContrastCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>